--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dompurify": "^3.2.4",
     "gray-matter": "^4.0.3",
     "next": "15.1.6",
     "react": "^19.0.0",
